move timer' code to separate js file

--- a/app/index.html
+++ b/app/index.html
@@ -151,6 +151,6 @@
 <script src="js/table.js"></script>
 <script src="js/common.js"></script>
 <script src="js/charts.js"></script>
-
+<script src="js/countdown.js"></script>
 </body>
 </html>
