rename common.js to main.js for better readability

--- a/app/index.html
+++ b/app/index.html
@@ -158,7 +158,7 @@
 <link rel="stylesheet" href="css/common.css">
 
 <script src="js/table.js"></script>
-<script src="js/common.js"></script>
+<script src="js/main.js"></script>
 <script src="js/charts.js"></script>
 <script src="js/countdown.js"></script>
 <script src="js/animatenumber.js"></script>
