test highcharts for activity chart

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
   <script src="libs/slickcircular/js/jquery.classycountdown.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+
+
 </head>
 <body>
   
@@ -129,6 +131,8 @@
                 </a>
               </center>
               
+              <div id="container" style="height: 400px; min-width: 600px"></div>
+              <script src="https://code.highcharts.com/stock/highstock.js"></script>
             <!-- <div id="chart_div" style="width: 100%;"></div>
               <div id="piechart"></div>
               <div id="vertical_chart" style="margin-bottom: 200px; height: 800px;"></div> -->
