--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
     <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
         <a href="#scroll-tab-1" class="mdl-layout__tab is-active">Timeline</a>
         <a href="#scroll-tab-2" class="mdl-layout__tab">Finished tasks</a>
-        <a href="#scroll-tab-3" class="mdl-layout__tab">Statistics</a>
+        <a href="#scroll-tab-3" class="mdl-layout__tab ">Statistics</a>
       </div>
   </header>
   <div class="mdl-layout__drawer "> <!-- mdl-layout--small-screen-only -->
@@ -69,7 +69,7 @@
     </nav>
   </div>
   <main class="mdl-layout__content">
-      <section class="mdl-layout__tab-panel " id="scroll-tab-1">
+      <section class="mdl-layout__tab-panel is-active" id="scroll-tab-1">
           <div class="page-content"><!-- Your content goes here -->
             <div id="timeline" style="width: 100%; height: 800px;"></div>
           </div>
@@ -81,7 +81,7 @@
               <table id="myTable" class="mdl-data-table table table-hover table-mc-light-blue"></table>
             </div>
           </section>
-          <section class="mdl-layout__tab-panel is-active" id="scroll-tab-3">
+          <section class="mdl-layout__tab-panel " id="scroll-tab-3">
             <div class="page-content"><!-- Your content goes here -->
               <div id="countdown-container">
                   <span class="countdown-description">Course will begin 10 january 2018<br><br></span>
@@ -134,7 +134,7 @@
               <div id="container" style="height: 400px; min-width: 600px"></div>
               <script src="https://code.highcharts.com/stock/highstock.js"></script>
             <!-- <div id="chart_div" style="width: 100%;"></div>
-              <div id="piechart"></div>
+              <div id="piechart"></div>-->
               <div id="vertical_chart" style="margin-bottom: 200px; height: 800px;"></div> -->
               <!-- <div id="series_chart_div"></div> -->
             </div>
