finish 2 charts in statistics tab and stay on google charts lib

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kottans stats</title>
 
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
   <!-- google charts  -->
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="libs/jquery.min.js"></script>
@@ -130,12 +131,10 @@
                   GET STARTED! <i class="material-icons">play_arrow</i>
                 </a>
               </center>
-              
-              <div id="container" style="height: 400px; min-width: 600px"></div>
-              <script src="https://code.highcharts.com/stock/highstock.js"></script>
             <!-- <div id="chart_div" style="width: 100%;"></div>
               <div id="piechart"></div>-->
-              <div id="vertical_chart" style="margin-bottom: 200px; height: 800px;"></div> -->
+              <div id="linechart" style="float: left;"></div>
+              <div id="vertical_chart" style="float: left;"></div> 
               <!-- <div id="series_chart_div"></div> -->
             </div>
             
