finish get requests for features values, delete animation of values because it not wait for values

--- a/app/index.html
+++ b/app/index.html
@@ -91,35 +91,35 @@
               <div class="features">
                 <div class="features-item">
                   <span class="icon"><img src="https://png.icons8.com/message/ios7/50/000000"></span>
-                  <span class="count">1380</span>
+                  <span class="count count-messages">....</span>
                     <span class="text"><b>MESSAGES</b><br>
                       <span class="description">IN OUR <a target="_blank" href="https://gitter.im/Kottans/frontend?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge">GITTER CHAT</a></span>
                     </span>
                 </div>
                 <div class="features-item">
                     <span class="icon"><img src="https://png.icons8.com/star/ios7/50/000000"></span>
-                    <span class="count">280</span>
+                    <span class="count starred-repo">....</span>
                     <span class="text"><b>REPO STARRED</b><br>
                       <span class="description">COURSE <a target="_blank" href="https://github.com/kottans/frontend">KOTTANS/FRONTEND</a></span>
                      </span>
                 </div>
                 <div class="features-item">
                     <span class="icon"><img src="https://png.icons8.com/user-male/ios7/50/000000"></span>
-                    <span class="count">155</span>
+                    <span class="count active-users">....</span>
                     <span class="text"><b>ACTIVE USERS</b><br>
-                      <span class="description">COLLABORATE</span>
+                      <span class="description">WRITE & COLLABORATE</span>
                   </span>
                 </div>
                 <div class="features-item">
                     <span class="icon"><img src="https://png.icons8.com/pull-request/ios7/50/000000"></span>
-                    <span class="count">71</span>
+                    <span class="count pull-requests">....</span>
                     <span class="text"><b>PULL REQUESTS</b><br>
                       <span class="description">IN COMMUNITY <a target="_blank" href="https://github.com/kottans/mock-repo/commits/master">REPO</a></span>
                     </span>
                 </div>
                 <div class="features-item">
                     <span class="icon"><img src="https://png.icons8.com/construction-worker/dotty/50/000000"></span>
-                    <span class="count">25</span>
+                    <span class="count learners">....</span>
                     <span class="text"><b>LEARNERS</b><br>
                       <span class="description">ARE EAGER FOR LUCK</span>
                     </span>
@@ -152,6 +152,6 @@
 <script src="js/main.js"></script>
 <script src="js/charts.js"></script>
 <script src="js/countdown.js"></script>
-<script src="js/animatenumber.js"></script>
+<!-- <script src="js/animatenumber.js"></script> -->
 </body>
 </html>
