clean up files no more needed

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
   <!-- google charts  -->
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script src="libs/jquery.min.js"></script>
+  <!-- <script src="libs/jquery.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <!-- material lite  -->
@@ -25,7 +25,7 @@
   <script src="libs/slickcircular/js/jquery.throttle.js"></script>
   <link href="libs/slickcircular/css/jquery.classycountdown.css" rel="stylesheet">
   <script src="libs/slickcircular/js/jquery.classycountdown.js"></script>
-
+  <!-- logo title aka bash font -->
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
 
@@ -92,7 +92,7 @@
                   <span class="countdown-description">Course will begin 10 january 2018<br><br></span>
               </div>
  
-              
+
               <div class="features">
                 <div class="features-item">
                   <span class="icon"><img src="https://png.icons8.com/message/ios7/50/000000"></span>
@@ -137,8 +137,6 @@
                 </a>
               </center>
 
-              <!-- <div id="piechart"></div> -->
-              
               <div class="chart-wrapper">
                 <div id="linechart"></div>
                 <div id="vertical_chart" ></div> 
@@ -158,8 +156,5 @@
 
 <script src="js/table.js"></script>
 <script src="js/main.js"></script>
-<script src="js/charts.js"></script>
-<script src="js/countdown.js"></script>
-<!-- <script src="js/animatenumber.js"></script> -->
 </body>
 </html>
