--- a/app/index.html
+++ b/app/index.html
@@ -125,8 +125,8 @@
                 <div class="features-item">
                     <span class="icon"><img src="https://png.icons8.com/construction-worker/dotty/50/000000"></span>
                     <span class="count learners">....</span>
-                    <span class="text"><b>LEARNERS</b><br>
-                      <span class="description">ARE EAGER FOR LUCK</span>
+                    <span class="text"><b>EAGER LEARNERS</b><br>
+                      <span class="description">ALREADY HAS FINISHED TASKS</span>
                     </span>
                 </div>
               </div>
