--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,6 @@
 <link rel="stylesheet" href="css/common.css">
 
 <script src="js/table.js"></script>
-<script src="js/main.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
